# literoom

./: .gitignore  Cargo.toml  PERF.md  PROMPT.md  QA.md  SIMPLIFY.md  TEST.md  package.json  pnpm-lock.yaml  progress.md
.cargo/: config.toml
.github/workflows/: ci.yml
apps/web/: nuxt.config.ts  package.json  playwright.config.ts  vitest.config.ts
crates/literoom-core/: Cargo.toml
crates/literoom-core/proptest-regressions/: histogram.txt
crates/literoom-core/proptest-regressions/mask/: apply.txt
crates/literoom-core/src/: adjustments.rs  curve.rs  histogram.rs  lib.rs  luminance.rs
crates/literoom-core/src/decode/: jpeg.rs  mod.rs  raw_thumbnail.rs  resize.rs  types.rs
crates/literoom-core/src/encode/: jpeg.rs  mod.rs
crates/literoom-core/src/mask/: apply.rs  linear.rs  mod.rs  radial.rs
crates/literoom-core/src/transform/: crop.rs  mod.rs  rotation.rs
crates/literoom-wasm/: Cargo.toml
crates/literoom-wasm/src/: adjustments.rs  curve.rs  decode.rs  encode.rs  histogram.rs  lib.rs  mask.rs  transform.rs  types.rs
docs/: gpu-pipeline-architecture.md  issues.md  manual-testing.md  perf-investigation.md  progress.md  qa-plan.md  simplify.md  spec.md  verified.md
docs/plans/: 2026-01-20-catalog-service-plan.md  2026-01-20-image-decoding-plan.md  2026-01-20-project-scaffolding-plan.md  2026-01-20-typescript-integration-plan.md  2026-01-20-wasm-bindings-plan.md  2026-01-21-clipping-overlay-plan.md  2026-01-21-clipping-visualization-plan.md  2026-01-21-copy-paste-settings-plan.md  2026-01-21-crop-overlay-plan.md  2026-01-21-crop-rotate-plan.md  2026-01-21-direct-url-nav-plan.md  2026-01-21-edit-view-plan.md  2026-01-21-export-fix-plan.md  2026-01-21-export-workflow-plan.md  2026-01-21-filmstrip-nav-fix-plan.md  2026-01-21-histogram-display-plan.md  2026-01-21-histogram-update-plan.md  2026-01-21-integration-testing-plan.md  2026-01-21-local-masks-plan.md  2026-01-21-local-masks-ui-plan.md  2026-01-21-preview-generation-plan.md  2026-01-21-thumbnail-fallback-plan.md  2026-01-21-tone-curve-plan.md  2026-01-21-ui-components-plan.md  2026-01-21-wasm-edit-pipeline-plan.md  2026-01-22-export-apply-edits-plan.md  2026-01-22-gallery-loading-plan.md  2026-01-22-gpu-acceleration-plan.md  2026-01-22-help-modal-plan.md  2026-01-22-import-ux-plan.md  2026-01-22-preview-priority-plan.md  2026-01-22-recent-folders-plan.md  2026-01-22-rescan-folder-ui-plan.md  2026-01-22-test-coverage-plan.md  2026-01-22-thumbnail-regeneration-plan.md  2026-01-22-zoom-pan-plan.md  2026-01-23-crop-confirm-before-apply-plan.md  2026-01-23-gpu-pipeline-integration-plan.md  2026-01-23-gpu-transforms-plan.md  2026-01-23-gpu-ui-integration-plan.md  (+8 more)
docs/progress/: README.md  iterations-01-10.md  iterations-101-110.md  iterations-11-20.md  iterations-111-120.md  iterations-121-130.md  iterations-131-140.md  iterations-141-150.md  iterations-151-160.md  iterations-161-170.md  iterations-171-180.md  iterations-181-190.md  iterations-21-30.md  iterations-31-40.md  iterations-41-50.md  shard-001.md  (+8 more)
(+252 files in other folders)
