[workspace]
resolver = "2"
members = [
    "crates/literoom-core",
    "crates/literoom-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/michaelthiessen/literoom"

[workspace.dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rawloader = "0.37"
kamadak-exif = "0.5"
thiserror = "2.0"

# Testing
proptest = "1.5"

[profile.release]
opt-level = "s"
lto = true
