[package]
name = "literoom-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core image processing library for Literoom"

[lib]
# Disable doctests due to rustdoc check-cfg incompatibility in Rust 1.80+
# All functionality is covered by unit tests
doctest = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
image = { workspace = true }
rawloader = { workspace = true }
kamadak-exif = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
