[package]
name = "literoom-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Literoom image processing"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
# Disable doctests due to rustdoc check-cfg incompatibility in Rust 1.80+
# All functionality is covered by unit tests
doctest = false

[dependencies]
literoom-core = { path = "../literoom-core" }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
